--- a/css/estilos.css
+++ b/css/estilos.css
@@ -2,98 +2,258 @@
 	padding: 0px;
 	margin: 0px;
 	box-sizing: border-box;
-
 }
-body{
-	background-image: url(../images/fondo_legion.jpg);
-	background-size: cover;
-	background-repeat: no-repeat;
+h1 {
+	font-size: 2.5em;
+	text-align:center;
+	padding-top: 20px;
+}
+h2 {font-size: 2.5em}
+h3 {
+	font-size: 2.5em;
+	text-align: center;
+}
+h4 {
+	font-size: 2em;
+	
+}
+
+body {
 	font-family: 'Rubik', sans-serif;
 }
-header{
-	padding-top: 2%;
+
+header {
+	padding-top: 1%;
 	padding-right: 7%;
-	padding-bottom: 2%;
-	padding-left: 2%;
+	padding-bottom: 1%;
+	padding-left: 7%;
 	display: flex;
 	justify-content: space-between;
+	background-color: rgb(245,245,245);
+	position: fixed;
+	width:100%;
+	z-index: 100;
 }
-nav ul{
-	margin-top: 3%;
-	padd: white;
+
+header div{
+	padding-right: 15px; 
 }
-nav ul li{
+
+nav ul > li{
+	float: left;
+}
+
+nav ul li {
 	display: inline-block;
 }
-nav ul li a{
+
+#submenu {
+	display: none;
+	
+}
+
+#submenu li{
+	padding-top: 3%;
+}
+
+li:hover > #submenu{
+	display: flex;
+	flex-direction: column;
+}
+
+.menu {
 	font-size: 1.2rem;
 	padding-right: 2rem;
 	text-transform: uppercase;
+}
 
-}
-a{
+a {
 	text-decoration: none;
-	color: white;
-	font-weight: 700;
+	color: #000000;
 }
+
+header a:hover {
+	color: blueviolet;
+	text-decoration: underline;
+}
+
+header .menu:hover {
+	color: blueviolet;
+	text-decoration: underline;
+}
+
 .icon { display: none; }
-section{
-	max-width: 1300px;
-	width: 90%;
-	margin-left: auto;
-	margin-right: auto;
-}
+
 .principal {
-	width: 100%;
-	height: 650px;
-	background-color: #00362b;
-	background-size: cover;
-	background-repeat: no-repeat;
+	
+	height: 90vh;
 	display: flex;
 	justify-content: center;
+	text-align: center;
 	align-items: center;
-	color: #ffffff;
-
+	flex-direction: column;
+	background-image: linear-gradient( 
+		0deg, 
+		rgba(0,0,0,0.5), 
+		rgba(0,0,0,0.5) 
+	),
+		url(../images/fondoprincipal.jpg);
+	background-repeat: no-repeat;
+	background-size: cover;
+	background-position: center center;
+	color: white;
+	font-size: 3.5em;
 }
-.principal div {
-	margin: 5%;
+
+.boton {
+	font-size: 1.25em;
+	font-weight: bold;
+	padding: 10px 30px;
+	border-radius: 5px;
+	border: 2px solid rgba(0,0,0,0.3);
+	box-shadow: 2px 2px 10px rgba(0,0,0,0.5);
+	color: white;
+	background-color: blueviolet;
+	margin: 15px;
 }
-.principal img{
 
-	width: 20%;
-	float: right ;
-	margin: 5%;
-
+.boton:hover {
+	background-color: rgb(101, 33, 165);
 }
 
-.principal div h3{
+#davidinicio {
+	background-image: 
+		linear-gradient( 
+			0deg, 
+			rgba(0,0,0,0.5), 
+			rgba(0,0,0,0.5) 
+		), 
+		url(../images/davidfondo.jpg);
+}
+
+.container {
+	text-align: center;
+	padding: 100px 12px;
+	display: flex;
+	justify-content: space-evenly;
 	margin-top: 5%;
 }
 
+.img-container {
+	background-image: url(../images/poster_legion.png);
+	background-size: cover;
+	background-position: center center;
+	height: 600px;
+	width: 500px;
+	align-items: center;
+	padding-right: 15px;
+}
 
-.secundario{
+.texto {
+	width: 50%;
+	max-width: 1000px;
+	min-width: 300px;
+	text-align: initial;
+	
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	font-size: 1.5em;
+	align-items: center;
+	
+}
+
+#resumen .img-container {
+	background-image: 
+		url(../images/legiontrama.jpg);
+
+}
+
+#trama #impar .img-container {
+	background-image: 
+		url(../images/legiontrama2.jpg);
+}
+
+#david #impar .img-container {
+	background-image: 
+		url(../images/danstevens.jpg);
+}
+
+.secundario {
 	margin-top: 5%;
 	display: flex;
+	padding: 5%;
+	flex-direction: column;
 }
+
 .secundario div{
-	width: 33%;
-	padding: 2%;
-	text-align: center;
+	display: flex;
 }
+
 .secundario div a img{
+	height: 33vh;
+	margin-bottom: 1rem;
+	margin-right: 1rem;
+}
+.container2 {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	margin-top: 5%;
+}
+
+#personajes {
+	background-color: rgb(30,30,30);
+}
+#personajes .texto{
+	color:white;
+}
+.personajes {
+	margin-top: 3%;
+	display: flex;
+}
+
+.personajes div a{
+	margin:1rem;
+	width: 28vh;
+	border-radius: 5px;
+    border: 2px solid rgba(0,0,0,0.3);
+    box-shadow: 2px 2px 10px rgba(0,0,0,0.5);
+    color: white;
+    background-color: rgba(64, 19, 255, 0.8);
+}
+
+.personajes div a:hover {
+	background-color: rgba(22, 1, 116, 0.8);
+}
+.personajes div a img {
 	width: 100%;
-	margin-bottom: 2rem;
 }
-h4{
-	font-size: 1.5rem;
-	text-transform: uppercase;
+
+.personajes div {
+	padding: 2%;
+	display: flex;
+	flex-wrap: wrap;
+	justify-content:center;
+
 }
+
+#impar {
+	background-color: rgb(30,30,30);
+}
+
+#impar .texto {
+	color: white;
+}
+
+
 footer{
 	display: flex;
 	justify-content: center;
 	align-items: center;
 	height: 350px;
 }
+
 footer img{
 	max-width: 2.5rem;
 	width: 100%;
@@ -102,74 +262,129 @@ footer img{
 	margin-right: .5%;
 }
 
-@media (max-width: 480px) { 
-header{
-	align-items: center;
-	justify-content: space-around;
-	flex-wrap: wrap;
-	background-color: #ffffff;
-	position: sticky;
-	top: 0;
-	z-index: 1;
+@media (max-width: 1050px){
+	header {
+		align-items: center;
+		justify-content: space-around;
+		flex-wrap: wrap;
+		background-color: #ffffff;
+		position: sticky;
+		top: 0;
+		z-index: 1;
+	}
+
+		header header a {
+			flex: 1 0 50%;
+		}
+
+		header nav {
+			flex-basis: 100%;
+		}
+
+	.icon {
+		display: block;
+		padding-right: 0.6rem;
+		text-align: right;
+	}
+
+	nav ul {
+		display: none;
+	}
+
+	nav.responsive #menu {
+		display: flex;
+		flex-direction: column;
+	}
+
+	nav.responsive ul li {
+		display: block;
+		text-align: center;
+		padding: 0.5rem;
+	}
+
+		nav.responsive ul li a {
+			padding-right: 0;
+		}
+	.img-container {
+		background-image: none;
+		height: 0px;
+		width: 0px;
+	}
+
+	.texto {
+		width: 100%;
+		text-align: center;
+		padding-left: 0px;
+		display: flex;
+		flex-direction: column;
+		justify-content: center;
+	}
+
+	h3{
+		font-size: 1.5em;
+	}
+	#trama .texto{
+		font-size: 1.33em;
+	}
 }
-header div, header a {
-	flex: 1 0 50%;
-}
-header nav {
-	flex-basis: 100%;
-}
-.icon {
-	display: block;
-	padding-right: 0.6rem;
-	text-align: right;
-}
-nav ul {
-	display: none;
-}
-nav.responsive ul {
-	display: block;
-}
-nav.responsive ul li {
-	display: block;
-	text-align: center;
-	padding: 0.5rem;
-}
-nav.responsive ul li a {
-	padding-right: 0;
-}
-section{
-	max-width: 480px;
-	width: 100%;
-	margin-left: auto;
-	margin-right: auto;
-}
-.principal{
-	height: 250px;
-	padding: 10%;
-}
-.secundario{
-	margin-top: 1%;
-	display: block;
-}
-.secundario div{
-	width: 100%;
-}
-.secundario div a img{
-	margin-bottom: 1rem;
-}
-h2{
-	font-size: 1rem;
-}
-h3{
-	font-size: 1rem;
-}
-h4{
-	font-size: 1rem;
-}
-footer{
-	height: 80px;
-}
-footer img{
-	max-width: 1.5rem;
-}
+@media (max-width: 480px) {
+	
+	section {
+		max-width: 480px;
+		width: 100%;
+		margin-left: auto;
+		margin-right: auto;
+	}
+
+	.principal {
+		height: 250px;
+		padding: 10%;
+		font-size: 2em;
+	}
+
+	.principal div img{
+		display: none;
+	}
+
+
+
+	.secundario {
+		margin-top: 1%;
+		display: block;
+		padding:0;
+		padding-top:2%;
+	}
+
+		.secundario div {
+			width: 100%;
+			text-align: center;
+		}
+
+			.secundario div a img {
+				width: 15vh;
+				height: 15vh;
+				margin: 0.3rem;
+			}
+	
+
+		.personajes div {
+			justify-content:center;
+			width: 100%;
+		}
+
+			.personajes div a {
+				width: 15vh;			
+			}
+			h4{
+				font-size: 1rem;
+			}
+
+	footer {
+		height: 80px;
+	}
+
+		footer img {
+			max-width: 1.5rem;
+		}
+	
 }
